--- a/cpp1/ex06/Makefile
+++ b/cpp1/ex06/Makefile
@@ -6,7 +6,7 @@
 #    By: sminot <simeon.minot@outlook.fr>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/19 19:59:08 by sminot            #+#    #+#              #
-#    Updated: 2025/05/20 13:47:34 by sminot           ###   ########.fr        #
+#    Updated: 2025/05/23 18:06:24 by sminot           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,6 +39,6 @@ fclean: clean
 
 re: fclean all
 
--include $(DEPS)
+-include $(OBJ_DEPS)
 
 .PHONY: all clean fclean re
