--- a/cpp4/ex03/Makefile
+++ b/cpp4/ex03/Makefile
@@ -11,7 +11,7 @@ OBJ_DIR = obj
 OBJ_FILES = $(addprefix $(OBJ_DIR)/, $(FILES:.cpp=.o))
 OBJ_DEPS = $(addprefix $(OBJ_DIR)/, $(FILES:.cpp=.d))
 
-CPPFLAGS = -Wall -Wextra -Werror -MMD -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -MMD -std=c++98 -g3
 CPP = c++
 
 $(OBJ_DIR)/%.o: %.cpp
